# Rust-Raytracer

./: .gitignore  Cargo.toml
examples/: first.rs  rotation_spheres.rs
src/: buffer.rs  camera.rs  color.rs  geometry.rs  hit.rs  hit_record.rs  lib.rs  lights.rs  main.rs  material.rs  object.rs  ray.rs  renderer.rs  scene.rs  shape.rs  shapes.rs  vec3.rs  vector.rs
src/material/: diffuse.rs  light.rs  metal.rs
src/shape/: mesh.rs  plane.rs  sphere.rs
src/shapes/: mod.rs  plane.rs  shape.rs  sphere.rs
