[package]
name = "pbrt"
version = "0.1.0"
authors = ["Aidan Beggs <nadiasggeb001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23.12", default-features = false, features = ["jpeg", "png"] }
rand = "0.7.3"
nalgebra = "0.23.1"
rayon = "1.5.0"
