[package]
name = "pbrt"
version = "0.1.0"
authors = ["Aidan Beggs <nadiasggeb001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.4", default-features = false, features = ["jpeg", "png"] }
rand = "0.8.5"
nalgebra = "0.31.3"
simba = "0.7.3"
rayon = "1.5.3"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
