[package]
name = "egui-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
eframe = "0.21.3"
egui = "0.21.0"
float-cmp = "0.9.0"
linked-hash-map = "0.5.6"
nalgebra = "0.32.2"
ply-rs = "0.1.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
